<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/tvInput"
       android:layout_width="match_parent"
       android:layout_height="250dp"
       android:background="@color/light_grey"
       android:padding="8dp"
       android:textSize="48sp"
       android:gravity="end|bottom"
       android:backgroundTint="@color/background2"
       android:textColor="@color/number"

       />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >

      <Button
          android:id="@+id/btnSeven"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:backgroundTint="@color/button"
          android:textColor="@color/number"
          android:onClick="onDigit"
          android:text="@string/_7"
          android:textSize="24sp"

          />

      <Button
          android:id="@+id/btnEight"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:backgroundTint="@color/button"
          android:textColor="@color/number"
          android:onClick="onDigit"
          android:text="@string/_8"
          android:textSize="24sp"

          />

      <Button
          android:id="@+id/btnNine"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:backgroundTint="@color/button"
          android:textColor="@color/number"
          android:onClick="onDigit"
          android:text="@string/_9"
          android:textSize="24sp"

          />

      <Button
          android:id="@+id/btnDivide"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:onClick="onOperator"
          android:text="@string/_Divide"
          android:textSize="24sp"

          />



   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >

      <Button
          android:id="@+id/btnFour"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:backgroundTint="@color/button"
          android:textColor="@color/number"
          android:onClick="onDigit"
          android:text="@string/_4"
          android:textSize="24sp"

          />

      <Button
          android:id="@+id/btnFive"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:backgroundTint="@color/button"
          android:textColor="@color/number"
          android:onClick="onDigit"
          android:text="@string/_5"
          android:textSize="24sp"

          />

      <Button
          android:id="@+id/btnSix"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:backgroundTint="@color/button"
          android:textColor="@color/number"
          android:onClick="onDigit"
          android:text="@string/_6"
          android:textSize="24sp"

          />

      <Button
          android:id="@+id/btnMultiple"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:onClick="onOperator"
          android:text="@string/_Multiple"
          android:textSize="24sp"

          />



   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >

      <Button
          android:id="@+id/btnOne"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:backgroundTint="@color/button"
          android:textColor="@color/number"
          android:onClick="onDigit"
          android:text="@string/_1"
          android:textSize="24sp"

          />

      <Button
          android:id="@+id/btnTwo"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:backgroundTint="@color/button"
          android:textColor="@color/number"
          android:onClick="onDigit"
          android:text="@string/_2"
          android:textSize="24sp"

          />

      <Button
          android:id="@+id/btnThree"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:backgroundTint="@color/button"
          android:textColor="@color/number"
          android:onClick="onDigit"
          android:text="@string/_3"
          android:textSize="24sp"

          />

      <Button
          android:id="@+id/btnMinus"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:onClick="onOperator"
          android:text="@string/_Minus"
          android:textSize="24sp"

          />



   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >

      <Button
          android:id="@+id/btnDot"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:backgroundTint="@color/button"
          android:textColor="@color/number"
          android:onClick="onDecimalPoint"
          android:text="@string/_Dot"
          android:textSize="24sp"

          />

      <Button
          android:id="@+id/btnZero"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:backgroundTint="@color/button"
          android:textColor="@color/number"
          android:onClick="onDigit"
          android:text="@string/_0"
          android:textSize="24sp"

          />

      <Button
          android:id="@+id/btnCLR"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:onClick="onClear"
          android:text="@string/clr"
          android:textSize="24sp"

          />


      <Button
          android:id="@+id/btnPlus"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:onClick="onOperator"
          android:text="@string/_Plus"
          android:textSize="24sp"

          />



   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >

      <Button
          android:id="@+id/btnSign"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="2dp"
          android:onClick="onEqual"
          android:text="@string/_Sign"
          android:textSize="24sp"

          />




   </LinearLayout>





</LinearLayout>